--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div id="buttons">
-			<a href=""> <button type="button">Calculator</button> </a>
+			<a href="calculator/calculator.html"> <button type="button">Calculator</button> </a>
 			<a href=""> <button type="button">Notepad</button> </a>
 			<a href=""> <button type="button">Timer</button> </a>
 			<a href=""> <button type="button">Search Ups</button> </a>
