--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div id="buttons">
 			<a href="calculator/calculator.html"> <button type="button">Calculator</button> </a>
-			<a href=""> <button type="button">Notepad</button> </a>
+			<a href="notepad/notepad.html"> <button type="button">Notepad</button> </a>
 			<a href=""> <button type="button">Timer</button> </a>
 			<a href=""> <button type="button">Search Ups</button> </a>
 			<a href=""> <button type="button">Activities</button> </a>
