--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<div id="buttons">
 			<a href="calculator/calculator.html"> <button type="button">Calculator</button> </a>
 			<a href="notepad/notepad.html"> <button type="button">Notepad</button> </a>
-			<a href=""> <button type="button">Timer</button> </a>
-			<a href=""> <button type="button">Search Ups</button> </a>
-			<a href=""> <button type="button">Activities</button> </a>
+			<a href="timer/timer.html"> <button type="button">Timer</button> </a>
+			<a href="search up/search up.html"> <button type="button">Search Ups</button> </a>
+			<a href="activities/activities.html"> <button type="button">Activities</button> </a>
 		</div>
 	</body>
 </html>
