activity center update

--- a/activities/game center.html
+++ b/activities/game center.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Activity Center</title>
+	</head>
+	<body>
+		<div id="buttons">
+			<a href="santa.html"> <button type="button"> Santa's Dangerous Adventure </button> </a>
+			<a href="flappy.html"> <button type="button"> Flappy Bird </button> </a>
+			<a href="donut.html"> <button type="button"> Donut Clickers </button> </a>
+		</div>
+	</body>
+</html>
