game center update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<a href="notepad/notepad.html"> <button type="button">Notepad</button> </a>
 			<a href="timer/timer.html"> <button type="button">Timer</button> </a>
 			<a href="search up/search up.html"> <button type="button">Search Ups</button> </a>
-			<a href="activities/activities.html"> <button type="button">Activities</button> </a>
+			<a href="activities/game center.html"> <button type="button">Activities</button> </a>
 		</div>
 	</body>
 </html>
