--- a/search up/search up.html
+++ b/search up/search up.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title></title>
+	</head>
+	<body>
+		<form>
+			<label for="text-in">What do you want to search up?</label>
+			<input type="text" id="text-in"> 
+	        <input type="radio" name="choice" value="Wikipedia"> Wikipedia
+	        <input type="radio" name="choice" value="Britannica"> Brittanica
+	        <input type="button" id="btn" value="Submit and Search">
+    	</form> 
+	</body>
+</html>
