--- a/search up/search up.html
+++ b/search up/search up.html
@@ -11,5 +11,6 @@
 	        <input type="radio" name="choice" value="Britannica"> Brittanica
 	        <input type="button" id="btn" value="Submit and Search">
     	</form> 
+    	<script src="script.js"></script>
 	</body>
 </html>
