--- a/search up/search up.html
+++ b/search up/search up.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>	
 <html>
 	<head>
 		<title></title>
@@ -7,8 +7,8 @@
 		<form>
 			<label for="text-in">What do you want to search up?</label>
 			<input type="text" id="text-in"> 
-	        <input type="radio" name="choice" value="Wikipedia"> Wikipedia
-	        <input type="radio" name="choice" value="Britannica"> Brittanica
+	        <input type="radio" class="radio" value="Wikipedia"> Wikipedia
+	        <input type="radio" class="radio" value="Britannica"> Brittanica
 	        <input type="button" id="btn" value="Submit and Search">
     	</form> 
     	<script src="script.js"></script>
