--- a/search up/search up.html
+++ b/search up/search up.html
@@ -10,7 +10,9 @@
 	        <input type="radio" class="radio" value="Wikipedia"> Wikipedia
 	        <input type="radio" class="radio" value="Britannica"> Brittanica
 	        <input type="button" id="btn" value="Submit and Search">
-    	</form> 
+    	</form>
+    	<br>
+    	<a href="/index.html"> <button type="button"> Return to Home </button> </a> 
     	<script src="script.js"></script>
 	</body>
 </html>
