--- a/activities/game center.html
+++ b/activities/game center.html
@@ -8,6 +8,7 @@
 			<a href="santa.html"> <button type="button"> Santa's Dangerous Adventure </button> </a>
 			<a href="flappy.html"> <button type="button"> Flappy Bird </button> </a>
 			<a href="donut.html"> <button type="button"> Donut Clickers </button> </a>
+			<a href="/index.html"> <button type="button"> Return to Home </button> </a>
 		</div>
 	</body>
 </html>
