--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<a href="/index.html"> <button type="button"> Return to Home </button> </a>
+</body>
+</html>
