--- a/notepad/notepad.html
+++ b/notepad/notepad.html
@@ -4,6 +4,6 @@
 		<title>Notepad</title>
 	</head>
 	<body>
-		
+		<a href="/index.html"> <button type="button"> Return to Home </button> </a>
 	</body>
 </html>
