--- a/timer/timer.html
+++ b/timer/timer.html
@@ -19,6 +19,8 @@
 	    <p id="mins"></p>
 	    <p id="secs"></p>
 	    <h2 id="end"></h2>
+	    <br>
+	    <a href="/index.html"> <button type="button"> Return to Home </button> </a>
 	   	<script src="script.js"></script>
 	</body>
 </html>
