--- a/search up/search up.html
+++ b/search up/search up.html
@@ -7,8 +7,8 @@
 		<form>
 			<label for="text-in">What do you want to search up?</label>
 			<input type="text" id="text-in"> 
-	        <input type="radio" class="radio" value="Wikipedia"> Wikipedia
-	        <input type="radio" class="radio" value="Britannica"> Brittanica
+	        <input type="radio" id="rd1" name="grp1" value="Wikipedia"> Wikipedia </input>
+	        <input type="radio" id="rd2" name="grp1" value="Britannica"> Brittanica </input>
 	        <input type="button" id="btn" value="Submit and Search">
     	</form>
     	<br>
