finishing the notes

--- a/activities/santa.html
+++ b/activities/santa.html
@@ -5,5 +5,6 @@
 	</head>
 	<body>
 		<iframe width="432" height="757" style="border: 0px;" src="https://studio.code.org/projects/gamelab/993IECnItcrEwY-axIB_ajOwhRBxxUi0VakXS-1w1uc/embed"></iframe>
+		<a href="/index.html/activities/game center.html"> <button type="button"> Return to Game Center </button> </a> 
 	</body>
 </html>
