--- a/notepad/notepad.html
+++ b/notepad/notepad.html
@@ -4,6 +4,15 @@
 		<title>Notepad</title>
 	</head>
 	<body>
+		<form>
+			<label for="title">Title:</label>
+            <input type="text" id="title">
+            <label for="body">Note:</label>
+            <input type="text" id="body">
+			<button type="button" onclick="add_on()"> Add note </button>
+		</form>
+		<ul id="notes"></ul>
 		<a href="/index.html"> <button type="button"> Return to Home </button> </a>
+		<script src="script.js"></script>
 	</body>
 </html>
