--- a/notepad/notepad.html
+++ b/notepad/notepad.html
@@ -11,6 +11,7 @@
             <input type="text" id="body">
 			<button type="button" onclick="add_on()"> Add note </button>
 		</form>
+		<div id="div"></div>
 		<ul id="notes"></ul>
 		<a href="/index.html"> <button type="button"> Return to Home </button> </a>
 		<script src="script.js"></script>
