timer and first

--- a/activities/santa.html
+++ b/activities/santa.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<iframe width="432" height="757" style="border: 0px;" src="https://studio.code.org/projects/gamelab/HKwLgyxnOiwGS-pr_vu72oUFLML4DQtjo7FZI-wYto8/embed"></iframe>
-		<a href="/index.html/activities/game center.html"> <button type="button"> Return to Game Center </button> </a> 
+		<a href="/activities/game center.html"> <button type="button"> Return to Game Center </button> </a> 
 	</body>
 </html>
