--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
+		<div id="title">
+			<h1> Student Widgets </h1>
+		</div>
 		<div id="buttons">
-			<a href="calculator/calculator.html"> <button type="button">Calculator</button> </a>
-			<a href="notepad/notepad.html"> <button type="button">Notepad</button> </a>
-			<a href="timer/timer.html"> <button type="button">Timer</button> </a>
-			<a href="search up/search up.html"> <button type="button">Search Ups</button> </a>
-			<a href="activities/game center.html"> <button type="button">Activities</button> </a>
+			<table id="table">
+  				<tr>
+    				<th><a href="calculator/calculator.html"> <button type="button">Calculator</button> </a></th>
+    				<th><a href="notepad/notepad.html"> <button type="button">Notepad</button> </a></th>
+    				<th><a href="search up/search up.html"> <button type="button">Search Ups</button> </a></th>
+    				<th><a href="activities/game center.html"> <button type="button">Activities</button> </a></th>
+    				<th> <a href="timer/timer.html"> <button type="button">Timer</button> </a></th>
+  				</tr>
 		</div>
 	</body>
 </html>
