--- a/activities/donut.html
+++ b/activities/donut.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<iframe width="432" height="757" style="border: 0px;" src="https://studio.code.org/projects/gamelab/JkYTAFY-_7S-dJJag3N6Xg7epH7cbc30rtb5_PcbYKg/embed"></iframe>
-		<a href="/index.html/activities/game center.html"> <button type="button"> Return to Game Center </button> </a> 
+		<a href="/activities/game center.html"> <button type="button"> Return to Game Center </button> </a> 
 	</body>
 </html>
