--- a/activities/game center.html
+++ b/activities/game center.html
@@ -2,13 +2,21 @@
 <html>
 	<head>
 		<title>Activity Center</title>
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-		<div id="buttons">
-			<a href="santa.html"> <button type="button"> Santa's Dangerous Adventure </button> </a>
-			<a href="flappy.html"> <button type="button"> Flappy Bird </button> </a>
-			<a href="donut.html"> <button type="button"> Donut Clickers </button> </a>
-			<a href="/index.html"> <button type="button"> Return to Home </button> </a>
+		<div id="title">
+			<h3> Games </h3>
+			<hr>
+		</div>
+		<div id="content"> These are the games that we coded </div>
+		<div id="pictures">
+			<a href="https://studio.code.org/projects/gamelab/nM5RngA3ughMAjxWiBiK8KlQUm2HaZXUv7Lh_QcMz7g" target="_blank" class="a"><img src="donut.png" alt="=Donut Clicer" style="width:400px;height:400px;"></a>
+			<a href="https://studio.code.org/projects/flappy/OHDE7h4MjBtWvZ0FeUHnmXdmb616jelCvpBD6Tv7wqs" target="_blank" class="b"><img src="flappy.png" alt="Flappy Santa" style="width:400px;height:400px;"></a>
+			<a href="https://studio.code.org/projects/gamelab/q-sidMzWd6wSMgT3MZZsdAcLylGPpiwW1q3NXJyVaUY" target="_blank" class="c"><img src="santa.png" alt="Santa's Dangerous Adventure" style="width:400px;height:400px;"></a>
+		</div>
+		<div id="footer">
+			Copyright &copy; 2020 Semi Group Productions
 		</div>
 	</body>
 </html>
