--- a/activities/game center.html
+++ b/activities/game center.html
@@ -13,8 +13,10 @@
 		<div id="pictures">
 			<a href="https://studio.code.org/projects/gamelab/nM5RngA3ughMAjxWiBiK8KlQUm2HaZXUv7Lh_QcMz7g" target="_blank" class="a"><img src="donut.png" alt="=Donut Clicer" style="width:400px;height:400px;"></a>
 			<a href="https://studio.code.org/projects/flappy/OHDE7h4MjBtWvZ0FeUHnmXdmb616jelCvpBD6Tv7wqs" target="_blank" class="b"><img src="flappy.png" alt="Flappy Santa" style="width:400px;height:400px;"></a>
-			<a href="https://studio.code.org/projects/gamelab/q-sidMzWd6wSMgT3MZZsdAcLylGPpiwW1q3NXJyVaUY" target="_blank" class="c"><img src="santa.png" alt="Santa's Dangerous Adventure" style="width:400px;height:400px;"></a>
+			<a href="https://studio.code.org/projects/gamelab/q-sidMzWd6wSMgT3MZZsdAcLylGPpiwW1q3NXJyVaUY" target="_blank" class="c"><img src="Santa.png" alt="Santa's Dangerous Adventure" style="width:400px;height:400px;"></a>
 		</div>
+		<br>
+		<a href="/index.html"> <button type="button"> Return to Home </button> </a>
 		<div id="footer">
 			Copyright &copy; 2020 Semi Group Productions
 		</div>
