--- a/timer/timer.html
+++ b/timer/timer.html
@@ -2,16 +2,25 @@
 <html>
 	<head>
 		<title></title>
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+		<div id="title">
+			<h1> Timer </h1>
+			<hr id="divider">
+		</div>
+		<div id="content"> Create any timer from the comfort of this website </div>
 		<form>
-			<label for="text-in">How long is the timer for?</label>
+			<label for="text-in" id="content">How long is the timer for?</label>
 			<input type="text" id="text-in" placeholder="e.g. 2 hours and 10 minutes"> 
 			<br>
 	        <input type="button" id="btn" value="Submit and Search">
     	</form>
     	<br>
     	<a href="/index.html"> <button type="button"> Return to Home </button> </a> 
+    	<div id="footer">
+			Copyright &copy; 2020 Semi Group Productions
+		</div>
     	<script src="script.js"></script>
 	</body>
 </html>
