--- a/search up/search up.html
+++ b/search up/search up.html
@@ -2,10 +2,15 @@
 <html>
 	<head>
 		<title></title>
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+		<div id="title">
+			<h1> Search Up </h1>
+			<hr id="divider">
+		</div>
 		<form>
-			<label for="text-in">What do you want to search up?</label>
+			<label for="text-in" id="text-in">What do you want to search up?</label>
 			<input type="text" id="text-in"> 
 	        <input type="radio" id="rd1" name="grp1" value="Wikipedia"> Wikipedia </input>
 	        <input type="radio" id="rd2" name="grp1" value="Britannica"> Brittanica </input>
@@ -14,5 +19,8 @@
     	<br>
     	<a href="/index.html"> <button type="button"> Return to Home </button> </a> 
     	<script src="script.js"></script>
+    	<div id="footer">
+			Copyright &copy; 2020 Semi Group Productions
+		</div>
 	</body>
 </html>
