--- a/notepad/notepad.html
+++ b/notepad/notepad.html
@@ -2,18 +2,26 @@
 <html>
 	<head>
 		<title>Notepad</title>
+		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
+		<div id="title">
+			<h1> Student Widgets </h1>
+			<hr id="divider">
+		</div>
 		<form>
-			<label for="title">Title:</label>
-            <input type="text" id="title">
+			<label for="titled">Title:</label>
+            <input type="text" id="titled">
             <label for="body">Note:</label>
             <input type="text" id="body">
-			<button type="button" onclick="add_on()"> Add note </button>
+			<button type="button" onclick="add_on()" id="add"> Add note </button>
 		</form>
 		<div id="div"></div>
 		<ul id="notes"></ul>
 		<a href="/index.html"> <button type="button"> Return to Home </button> </a>
+		<div id="footer">
+			Copyright &copy; 2020 Semi Group Productions
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
