--- a/search up/search up.html
+++ b/search up/search up.html
@@ -10,7 +10,7 @@
 			<hr id="divider">
 		</div>
 		<form>
-			<label for="text-in" id="text-in">What do you want to search up?</label>
+			<label for="text-in" class="text-in">What do you want to search up?</label>
 			<input type="text" id="text-in"> 
 	        <input type="radio" id="rd1" name="grp1" value="Wikipedia"> Wikipedia </input>
 	        <input type="radio" id="rd2" name="grp1" value="Britannica"> Brittanica </input>
@@ -18,9 +18,9 @@
     	</form>
     	<br>
     	<a href="/index.html"> <button type="button"> Return to Home </button> </a> 
-    	<script src="script.js"></script>
     	<div id="footer">
 			Copyright &copy; 2020 Semi Group Productions
 		</div>
+		<script src="script.js"></script>
 	</body>
 </html>
