--- a/search up/search up.html
+++ b/search up/search up.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>	
 <html>
 	<head>
-		<title></title>
+		<title>Search Up</title>
 		<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
