clean up images

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     		<a href="timer/timer.html"> <button type="button">Timer</button> </a>
 		</div>
 		<div id="pictures" class="column">
-			<img src="book.jpg" alt="Books" width="400" height="260">
-			<img src="plant.jpg" alt="Books grow our minds" width="400" height="260">
+			<img src="images/book.jpg" alt="Books" width="400" height="260">
+			<img src="images/plant.jpg" alt="Books grow our minds" width="400" height="260">
 		</div>
 		<div id="about" class="column"><p>We wanted to make a website that has all your useful things in one place! And so, Jeffernickel.com was born. With timers, and notepads, and fun games we coded (and some online games as well), we present Student Widgets to you! The point of this site is simply an all-in-one website, use it as you please! Have fun! P.S. This website is free to use, please share it with your friends!</p></div>
 		<div id="owners" class="column">Hello! We’re just 3 random people who happened to decide to create a website. There’s not really much to know about us...We hope you truly have a wonderful experience!</div>
