flex for first index

--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 			<hr id="divider">
 		</div>
 		<div id="buttons">
-    		<th><a href="calculator/calculator.html"> <button type="button">Calculator</button> </a>
+    		<a href="calculator/calculator.html"> <button type="button">Calculator</button> </a>
     		<a href="notepad/notepad.html"> <button type="button">Notepad</button> </a>
     		<a href="search up/search up.html"> <button type="button">Search Ups</button> </a>
     		<a href="activities/game center.html"> <button type="button">Activities</button> </a>
     		<a href="timer/timer.html"> <button type="button">Timer</button> </a>
 		</div>
-		<div id="pictures" class="column">
-			<img src="images/book.jpg" alt="Books" width="400" height="260">
-			<img src="images/plant.jpg" alt="Books grow our minds" width="400" height="260">
+		<div id="columns">
+			<div id="pictures">
+				<img src="images/book.jpg" alt="Books" width="400" height="260">
+				<img src="images/plant.jpg" alt="Books grow our minds" width="400" height="260">
+			</div>
+			<div id="about"><p>We wanted to make a website that has all your useful things in one place! And so, Jeffernickel.com was born. With timers, and notepads, and fun games we coded (and some online games as well), we present Student Widgets to you! The point of this site is simply an all-in-one website, use it as you please! Have fun! P.S. This website is free to use, please share it with your friends!</p></div>
+			<div id="owners">Hello! We’re just 3 random people who happened to decide to create a website. There’s not really much to know about us...We hope you truly have a wonderful experience!</div>
 		</div>
-		<div id="about" class="column"><p>We wanted to make a website that has all your useful things in one place! And so, Jeffernickel.com was born. With timers, and notepads, and fun games we coded (and some online games as well), we present Student Widgets to you! The point of this site is simply an all-in-one website, use it as you please! Have fun! P.S. This website is free to use, please share it with your friends!</p></div>
-		<div id="owners" class="column">Hello! We’re just 3 random people who happened to decide to create a website. There’s not really much to know about us...We hope you truly have a wonderful experience!</div>
 		<div id="footer">
 			Copyright &copy; 2020 Semi Group Productions
 		</div>
-		oofos
 	</body>
 </html>
