button flex question mark?

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 			<hr id="divider">
 		</div>
 		<div id="buttons">
-    		<a href="calculator/calculator.html"> <button type="button">Calculator</button> </a>
-    		<a href="notepad/notepad.html"> <button type="button">Notepad</button> </a>
-    		<a href="search up/search up.html"> <button type="button">Search Ups</button> </a>
-    		<a href="activities/game center.html"> <button type="button">Activities</button> </a>
-    		<a href="timer/timer.html"> <button type="button">Timer</button> </a>
+    		<a href="calculator/calculator.html"> <button type="button" id="calculator">Calculator</button> </a>
+    		<a href="notepad/notepad.html"> <button type="button" id="notepad">Notepad</button> </a>
+    		<a href="search up/search up.html"> <button type="button" id="Search">Search Ups</button> </a>
+    		<a href="activities/game center.html"> <button type="button" id="activities">Activities</button> </a>
+    		<a href="timer/timer.html"> <button type="button" id="timer">Timer</button> </a>
 		</div>
 		<div id="columns">
 			<div id="pictures">
