--- a/notepad/notepad.html
+++ b/notepad/notepad.html
@@ -15,7 +15,8 @@
             <label for="body">Note:</label>
             <input type="text" id="body">
 			<button type="button" onclick="add_on()" id="add"> Add note </button>
-		</form>
+			<input type="button" id="add" class="reset" value="Reset?">
+ 		</form>
 		<div id="div"></div>
 		<ul id="notes"></ul>
 		<a href="/index.html"> <button type="button"> Return to Home </button> </a>
